update schema link

--- a/tutorials/quality_standards.ipynb
+++ b/tutorials/quality_standards.ipynb
@@ -62,7 +62,7 @@
     "topic in the official\n",
     "[documentation of the ASDF standard](https://asdf-standard.readthedocs.io/en/latest/schemas.html) which is the\n",
     "foundation of a WelDX file.\n",
-    "Furthermore, an overview of all pre-defined schema files can be found on the [Standards](../standard.rst) page of this\n",
+    "Furthermore, an overview of all pre-defined schema files can be found on the [Standards](https://weldx.readthedocs.io/projects/weldx-standard/en/latest/schemas.html) page of this\n",
     "documentation.\n",
     "\n",
     "## Installing and using quality standards\n",
@@ -390,7 +390,7 @@
     "The mapping section is a YAML list with the name `tags`.\n",
     "Each of its items need a `uri` field that specifies the URI of the object that should get a new schema assigned to it.\n",
     "If you are not sure about the exact URI just have a look into the original schema of the object.\n",
-    "You can find all schemas [here](../standard.rst).\n",
+    "You can find all schemas [here](https://weldx.readthedocs.io/projects/weldx-standard/en/latest/schemas.html).\n",
     "In our example we want to replace the schema for the URI\n",
     "`asdf://weldx.bam.de/weldx/schemas/equipment/measurement_equipment-1.0.0`.\n",
     "Additionally, each item of the YAML list needs a `file` property which specifies the relative file path of the new\n",
