Fix linter issues

--- a/tutorials/geometry_01_profiles.ipynb
+++ b/tutorials/geometry_01_profiles.ipynb
@@ -57,7 +57,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "line_segment_0 = geo.LineSegment.construct_with_points(Q_([0, 0],\"mm\"), Q_([1, 0],\"mm\"))"
+    "line_segment_0 = geo.LineSegment.construct_with_points(\n",
+    "    Q_([0, 0], \"mm\"), Q_([1, 0], \"mm\")\n",
+    ")"
    ]
   },
   {
@@ -126,10 +128,16 @@
    "source": [
     "# create arc segments\n",
     "arc_segment_0_cw = geo.ArcSegment.construct_with_points(\n",
-    "    Q_([-1, 0], \"mm\"), Q_([0, 1], \"mm\"), point_center=Q_([0, 0], \"mm\"), arc_winding_ccw=False\n",
+    "    Q_([-1, 0], \"mm\"),\n",
+    "    Q_([0, 1], \"mm\"),\n",
+    "    point_center=Q_([0, 0], \"mm\"),\n",
+    "    arc_winding_ccw=False,\n",
     ")\n",
     "arc_segment_0_ccw = geo.ArcSegment.construct_with_points(\n",
-    "    Q_([-1, 0], \"mm\"), Q_([0, 1], \"mm\"), point_center=Q_([0, 0], \"mm\"), arc_winding_ccw=True\n",
+    "    Q_([-1, 0], \"mm\"),\n",
+    "    Q_([0, 1], \"mm\"),\n",
+    "    point_center=Q_([0, 0], \"mm\"),\n",
+    "    arc_winding_ccw=True,\n",
     ")\n",
     "\n",
     "# rasterize segments\n",
@@ -168,10 +176,18 @@
    "source": [
     "# create arc segments\n",
     "arc_segment_1_rcp = geo.ArcSegment.construct_with_radius(\n",
-    "    Q_([0, 0], \"mm\"), Q_([1, 1], \"mm\"), radius=\"1mm\", center_left_of_line=False, arc_winding_ccw=True\n",
+    "    Q_([0, 0], \"mm\"),\n",
+    "    Q_([1, 1], \"mm\"),\n",
+    "    radius=\"1mm\",\n",
+    "    center_left_of_line=False,\n",
+    "    arc_winding_ccw=True,\n",
     ")\n",
     "arc_segment_1_lcp = geo.ArcSegment.construct_with_radius(\n",
-    "    Q_([0, 0], \"mm\"), Q_([1, 1], \"mm\"), radius=\"1mm\", center_left_of_line=True, arc_winding_ccw=True\n",
+    "    Q_([0, 0], \"mm\"),\n",
+    "    Q_([1, 1], \"mm\"),\n",
+    "    radius=\"1mm\",\n",
+    "    center_left_of_line=True,\n",
+    "    arc_winding_ccw=True,\n",
     ")\n",
     "\n",
     "# rasterize segments\n",
@@ -216,7 +232,10 @@
     "segment_0 = geo.LineSegment.construct_with_points(Q_([0, 0], \"mm\"), Q_([0, 1], \"mm\"))\n",
     "segment_1 = geo.LineSegment.construct_with_points(Q_([0, 1], \"mm\"), Q_([1, 1], \"mm\"))\n",
     "segment_2 = geo.ArcSegment.construct_with_points(\n",
-    "    Q_([1, 1], \"mm\"), Q_([3, 1], \"mm\"), point_center=Q_([2, 1], \"mm\"), arc_winding_ccw=False\n",
+    "    Q_([1, 1], \"mm\"),\n",
+    "    Q_([3, 1], \"mm\"),\n",
+    "    point_center=Q_([2, 1], \"mm\"),\n",
+    "    arc_winding_ccw=False,\n",
     ")\n",
     "segment_3 = geo.LineSegment.construct_with_points(Q_([3, 1], \"mm\"), Q_([4, 1], \"mm\"))\n",
     "segment_4 = geo.LineSegment.construct_with_points(Q_([4, 1], \"mm\"), Q_([4, 0], \"mm\"))\n",
@@ -297,7 +316,9 @@
     "shape_1.add_line_segments(Q_([[0, 0], [0, 1], [1, 1]], \"mm\"))\n",
     "\n",
     "# add 6 more segments to the existing shape\n",
-    "shape_1.add_line_segments(Q_([[0.5, 1.5], [0, 1], [1, 0], [0, 0], [1, 1], [1, 0]], \"mm\"))\n",
+    "shape_1.add_line_segments(\n",
+    "    Q_([[0.5, 1.5], [0, 1], [1, 0], [0, 0], [1, 1], [1, 0]], \"mm\")\n",
+    ")\n",
     "\n",
     "# rasterize data\n",
     "data_shape_1 = shape_1.rasterize(\"0.05mm\")\n",
@@ -387,7 +408,7 @@
    "outputs": [],
    "source": [
     "# reflect across the y axis\n",
-    "shape_4 = shape_1.reflect(reflection_normal=Q_([1, 0],\"mm\"))\n",
+    "shape_4 = shape_1.reflect(reflection_normal=Q_([1, 0], \"mm\"))\n",
     "\n",
     "# rasterize\n",
     "data_shape_4 = shape_4.rasterize(\"0.05mm\")\n",
@@ -427,7 +448,9 @@
    "outputs": [],
    "source": [
     "# reflect across a line with slope 1 containing the points (0,1) and (0.5, 1.5)\n",
-    "shape_6 = shape_1.reflect(reflection_normal=Q_([-1, 1], \"mm\"), distance_to_origin=Q_(1 / np.sqrt(2),\"mm\"))\n",
+    "shape_6 = shape_1.reflect(\n",
+    "    reflection_normal=Q_([-1, 1], \"mm\"), distance_to_origin=Q_(1 / np.sqrt(2), \"mm\")\n",
+    ")\n",
     "\n",
     "# rasterize\n",
     "data_shape_6 = shape_6.rasterize(\"0.05mm\")\n",
@@ -465,7 +488,9 @@
     "# plot all shapes\n",
     "plt.plot(data_shape_1[0], data_shape_1[1], \"rx\", label=\"original\")\n",
     "plt.plot(data_shape_7[0], data_shape_7[1], \"bx\", label=\"reflected\")\n",
-    "plt.plot([point_0[0].m, point_1[0].m], [point_0[1].m, point_1[1].m], \"co\", label=\"points\")\n",
+    "plt.plot(\n",
+    "    [point_0[0].m, point_1[0].m], [point_0[1].m, point_1[1].m], \"co\", label=\"points\"\n",
+    ")\n",
     "plt.plot([-1, 2], [0, 3], \"y--\", label=\"line of reflection\")\n",
     "plt.grid()\n",
     "plt.legend(loc=\"upper right\")\n",
@@ -496,7 +521,9 @@
     "# plot all shapes\n",
     "plt.plot(data_shape_1[0], data_shape_1[1], \"rx\", label=\"original\")\n",
     "plt.plot(data_shape_8[0], data_shape_8[1], \"bx\", label=\"reflected\")\n",
-    "plt.plot([point_0[0].m, point_1[0].m], [point_0[1].m, point_1[1].m], \"co\", label=\"points\")\n",
+    "plt.plot(\n",
+    "    [point_0[0].m, point_1[0].m], [point_0[1].m, point_1[1].m], \"co\", label=\"points\"\n",
+    ")\n",
     "plt.plot(\n",
     "    [point_0[0].m, point_1[0].m],\n",
     "    [point_0[1].m, point_1[1].m],\n",
@@ -525,8 +552,12 @@
    "source": [
     "# create shapes\n",
     "shape_9 = geo.Shape()\n",
-    "shape_9.add_line_segments(Q_([[0, 1], [1.5, 1], [3, 0.25], [3, -1], [0, -1], [0, 1]], \"mm\"))\n",
-    "shape_10 = shape_9.reflect(reflection_normal=Q_([1, 0], \"mm\"), distance_to_origin=\"3.5mm\")\n",
+    "shape_9.add_line_segments(\n",
+    "    Q_([[0, 1], [1.5, 1], [3, 0.25], [3, -1], [0, -1], [0, 1]], \"mm\")\n",
+    ")\n",
+    "shape_10 = shape_9.reflect(\n",
+    "    reflection_normal=Q_([1, 0], \"mm\"), distance_to_origin=\"3.5mm\"\n",
+    ")\n",
     "\n",
     "# create profile\n",
     "profile_0 = geo.Profile(shape_9)\n",
@@ -639,10 +670,17 @@
     "\n",
     "_DEFAULT_LEN_UNIT = UREG.millimeters\n",
     "\n",
+    "\n",
     "class SineWaveSegmentBase:\n",
-    "    @UREG.wraps(None, (None, _DEFAULT_LEN_UNIT, _DEFAULT_LEN_UNIT, None, _DEFAULT_LEN_UNIT), strict=True)\n",
+    "    @UREG.wraps(\n",
+    "        None,\n",
+    "        (None, _DEFAULT_LEN_UNIT, _DEFAULT_LEN_UNIT, None, _DEFAULT_LEN_UNIT),\n",
+    "        strict=True,\n",
+    "    )\n",
     "    def __init__(self, point_start, point_end, num_half_waves, amplitude=1):\n",
-    "        self._points = np.array([point_start.tolist(), point_end.tolist()], float).transpose()\n",
+    "        self._points = np.array(\n",
+    "            [point_start.tolist(), point_end.tolist()], float\n",
+    "        ).transpose()\n",
     "        self._num_half_waves = num_half_waves\n",
     "\n",
     "        vector_start_end = self.point_end.m - self.point_start.m\n",
@@ -766,7 +804,7 @@
     "class SineWaveSegmentFull(SineWaveSegmentBase):\n",
     "    def __init__(self, point_start, point_end, num_half_waves, amplitude=\"1mm\"):\n",
     "        super().__init__(point_start, point_end, num_half_waves, amplitude)\n",
-    "        \n",
+    "\n",
     "    @UREG.wraps(None, (None, _DEFAULT_LEN_UNIT), strict=True)\n",
     "    def apply_translation(self, vector):\n",
     "        self._points += np.ndarray((2, 1), float, np.array(vector, float))\n",
@@ -839,7 +877,9 @@
     "plt.plot(data_shape_14[0], data_shape_14[1], \"g\", label=\"distorted and translated\")\n",
     "plt.plot(data_shape_15[0], data_shape_15[1], \"k\", label=\"rotated and translated\")\n",
     "plt.plot(data_shape_16[0], data_shape_16[1], \"m\", label=\"reflected\")\n",
-    "plt.plot([point_0[0].m, point_1[0].m], [point_0[1].m, point_1[1].m], \"co\", label=\"points\")\n",
+    "plt.plot(\n",
+    "    [point_0[0].m, point_1[0].m], [point_0[1].m, point_1[1].m], \"co\", label=\"points\"\n",
+    ")\n",
     "plt.plot(\n",
     "    [point_0[0].m, point_1[0].m],\n",
     "    [point_0[1].m, point_1[1].m],\n",
