--- a/tutorials/geometry_02_geometry.ipynb
+++ b/tutorials/geometry_02_geometry.ipynb
@@ -465,13 +465,13 @@
    },
    "outputs": [],
    "source": [
-    "v_profile_custom_interp = VariableProfile([profile_3, profile_2], Q_([0, 1], \"mm\"), my_interp)\n",
+    "v_profile_custom_interp = VariableProfile(\n",
+    "    [profile_3, profile_2], Q_([0, 1], \"mm\"), my_interp\n",
+    ")\n",
     "trace_custom_interp = Trace(LinearHorizontalTraceSegment(\"20cm\"))\n",
     "geometry_custom_interp = Geometry(v_profile_custom_interp, trace_custom_interp)\n",
     "\n",
-    "geometry_custom_interp.plot(\n",
-    "    profile_raster_width=\"0.25cm\", trace_raster_width= \"2cm\"\n",
-    ")"
+    "geometry_custom_interp.plot(profile_raster_width=\"0.25cm\", trace_raster_width=\"2cm\")"
    ]
   }
  ],
