--- a/tutorials/01_01_introduction.ipynb
+++ b/tutorials/01_01_introduction.ipynb
@@ -95,7 +95,7 @@
     "However, while the interactive output in a jupyter notebook is quite handy, the console output can get pretty large.\n",
     "This might be simply to much information if you just want to get a simple overview of the file content.\n",
     "\n",
-    "Alternatively, we can get a quick overview of the top level items of the file structue by itrating over its data and printing its keys like this:"
+    "Alternatively, we can get a quick overview over the top level items of the file structue by using the `info` method:"
    ]
   },
   {
@@ -104,16 +104,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for key in wxfile.keys():\n",
-    "    print(key)"
+    "wxfile.info()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can pick each individual item by using the direct access operator of the file with the corresponding item name.\n",
-    "For example, if we like to get the coordinate systems, we can simply run:"
+    "The `info` method lists the internal file structure converted to python objects.\n",
+    "This makes it easy to identify where we find a specific piece of information, how to access it and which object type we can expect.\n",
+    "For example, we can see that the item `groove_shape` is an `VGroove` object, that we can access as follows:"
    ]
   },
   {
@@ -122,17 +122,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csm = wxfile[\"coordinate_systems\"]\n",
-    "print(csm)"
+    "groove = wxfile[\"workpiece\"][\"geometry\"][\"groove_shape\"]\n",
+    "print(type(groove))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, the object we got is of type `CoordinateSystemManager`.\n",
-    "We will discuss in more detail in the upcoming tutorials, what you can do with the individual objects that you may find in a `WeldxFile`.\n",
-    "For now, we will only focus on inspecting the file."
+    "The output confirms that the object we got is truly of type `VGroove`.\n",
+    "We will discuss in more detail in the upcoming tutorials, what you can do with the individual objects that you may find in a `WeldxFile`."
    ]
   },
   {
