--- a/tutorials/01_01_introduction.ipynb
+++ b/tutorials/01_01_introduction.ipynb
@@ -68,7 +68,8 @@
     "\n",
     "If you are running a jupyter notebook, you can use the `show_asdf_header` method of `WeldxFile` to get a nicely rendered overview of the file content. \n",
     "The output might vary if you are running the classic notebook environment or a Jupyter-Lab environment.\n",
-    "In the latter case, you will get an interactive, clickable tree view to navigate through the file content:\n",
+    "In the latter case, you will get an interactive, clickable tree view to navigate through the file content.\n",
+    "Uncomment the code in the next cell to try it out:\n",
     "\n",
     "> HINT: Remember that you can start a jupyter-lab version of this notebook in our online documentation by clicking at the binder link at the start of this tutorial"
    ]
@@ -81,7 +82,7 @@
    },
    "outputs": [],
    "source": [
-    "wxfile.show_asdf_header()"
+    "# wxfile.show_asdf_header()"
    ]
   },
   {
