--- a/tutorials/01_01_introduction.ipynb
+++ b/tutorials/01_01_introduction.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Introduction / Opening WelDX Files\n",
     "\n",
-    "## Intruduction\n",
+    "## Introduction\n",
     "\n",
     "This tutorial is the first one of a whole series that has the purpose to teach you how to work with WelDX files using the `weldx` Python package.\n",
     "In each tutorial, we will focus on a small feature set and learn step by step how you can find, extract and process data stored in a WelDX file.\n",
@@ -21,8 +21,8 @@
     "To learn how to install the `weldx` package and all required dependencies to run the tutorials, visit the [installation guide] (https://weldx.readthedocs.io/en/latest/install.html) page of our [online documentation](https://weldx.readthedocs.io/en/latest/index.html).\n",
     "\n",
     "All tutorials are also contained on the [\"Getting Started\"](https://weldx.readthedocs.io/en/latest/tutorials.html) page of the [online documentation](https://weldx.readthedocs.io/en/latest/index.html) so that you can read a nicely rendered version online.\n",
-    "In case you don't have the `weldx` package intstalled yet but wan't to test the tutorial code, you can click on the binder link button that can be found at the top of each tutorial in the online version of the documentation.\n",
-    "This will start a virtual machine whith everything set up correctly that you can control through your browser.\n",
+    "In case you don't have the `weldx` package installed yet but want to test the tutorial code, you can click on the binder link button that can be found at the top of each tutorial in the online version of the documentation.\n",
+    "This will start a virtual machine with everything set up correctly that you can control through your browser.\n",
     "\n",
     "## Opening and navigating through WelDX Files\n",
     "\n",
@@ -92,11 +92,11 @@
     "### Inspecting the File content with pure Python\n",
     "\n",
     "You can also utilize the `show_asdf_header` method to visualize the file content when using weldx in a pure Python script.\n",
-    "This will print the human readable part of the file that is stored in [YAML format](https://yaml.org/) directly to console.\n",
+    "This will print the human-readable part of the file that is stored in [YAML format](https://yaml.org/) directly to console.\n",
     "However, while the interactive output in a jupyter notebook is quite handy, the console output can get pretty large.\n",
-    "This might be simply to much information if you just want to get a simple overview of the file content.\n",
+    "This might be simply too much information if you just want to get a simple overview of the file content.\n",
     "\n",
-    "Alternatively, we can get a quick overview over the top level items of the file structue by using the `info` method:"
+    "Alternatively, we can get a quick overview over the top level items of the file structure by using the `info` method:"
    ]
   },
   {
