--- a/tutorials/01_02_time_dependent_data.ipynb
+++ b/tutorials/01_02_time_dependent_data.ipynb
@@ -29,7 +29,8 @@
     "\n",
     "\n",
     "Two important quantities in welding applications are the welding current and welding voltage.\n",
-    "Both are constantly monitored during an experiment, and the obtained data is a one dimensional array with time being its only dimension.\n",
+    "Both are constantly monitored during an experiment.\n",
+    "The obtained data is a one dimensional array with time being its only dimension.\n",
     "We will extract both from the file and see what we can do with it.\n",
     "First we read the file and get an overview over its content as we learned in the previous tutorial:"
    ]
@@ -51,8 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for key in wxfile.keys():\n",
-    "    print(key)"
+    "wxfile.info()"
    ]
   },
   {
