--- a/tutorials/01_02_time_dependent_data.ipynb
+++ b/tutorials/01_02_time_dependent_data.ipynb
@@ -69,17 +69,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "current = wxfile[\"welding_current\"].data\n",
-    "type(current)"
+    "current = wxfile[\"welding_current\"]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> ToDo: Adjust text if schema is not adjusted\n",
-    "\n",
-    "The object we extracted is of type `TimeSeries`.\n",
+    "The object we extracted is of type `TimeSeries` as can be seen in the `info` output.\n",
     "This is a special type provided by WelDX to deal with time dependent data.\n",
     "\n",
     "If you are familiar with the `matplotlib` package, it shouldn't be too difficult for you to plot the data, once you know how to get it out of the `TimeSeries`.\n",
@@ -167,8 +164,8 @@
     "From the returned value we see that the data indeed only consists of a single dimension.\n",
     "Furthermore, we get the exact number of data points that are stored in the time series.\n",
     "\n",
-    "We already saw in axes labeling of the plots, that the `TimeSeries` also stores the units of the data \n",
-    "We can get the unit of the data by calling the `units` property:"
+    "We already saw in the axes labeling of the plots, that the `TimeSeries` also stores the units of the data \n",
+    "We can get it by calling the `units` property:"
    ]
   },
   {
@@ -264,22 +261,12 @@
     "## Conclusion\n",
     "\n",
     "This concludes the tutorial about accessing and plotting time dependent data.\n",
-    "We have learned about some basic functionalities of the `TimeSeries` class and know now, how to get the data for further processing and how to quickly visualize it, using the `plot` method."
+    "We have learned about some basic functionalities of the `TimeSeries` class and know now, how to get the data for further processing and how to quickly visualize it, using the `plot` method.\n",
+    "\n",
+    "## Further readings\n",
+    "\n",
+    "- [API tutorial: `TimeSeries`](https://weldx.readthedocs.io/en/latest/tutorials/timeseries_01.html)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> **ToDo:** link TimeSeries tutorial"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
