--- a/tutorials/01_03_geometry.ipynb
+++ b/tutorials/01_03_geometry.ipynb
@@ -28,11 +28,7 @@
     "The complexity of a specimen can range from a single metal plate to complex 3 dimensional multi-part structures.\n",
     "In this tutorial, we will discuss specimen geometries based on a 2-dimensional cross-section that is extruded into 3d space.\n",
     "\n",
-    "First we open the example file and extract the workpiece informatation.\n",
-    "\n",
-    "> TODO: Review this hint before merging\n",
-    "\n",
-    "> HINT: Remember that you can get a quick overview over a WelDX file with the `WeldxFile.info()` method"
+    "First we open the example file and extract the workpiece informatation."
    ]
   },
   {
@@ -43,7 +39,24 @@
    "source": [
     "from weldx import WeldxFile\n",
     "\n",
-    "wxfile = WeldxFile(\"single_pass_weld.wx\")\n",
+    "wxfile = WeldxFile(\"single_pass_weld.wx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wxfile.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "workpiece = wxfile[\"workpiece\"]"
    ]
   },
