--- a/tutorials/quality_standards.ipynb
+++ b/tutorials/quality_standards.ipynb
@@ -186,8 +186,8 @@
     "%YAML 1.1\n",
     "---\n",
     "$schema: \"http://stsci.edu/schemas/yaml-schema/draft-01\"\n",
-    "id: \"asdf://weldx.bam.de/weldx/schemas/equipment/measurement_equipment-1.0.0\"\n",
-    "tag: \"asdf://weldx.bam.de/weldx/tags/equipment/measurement_equipment-1.0.0\"\n",
+    "id: \"asdf://weldx.bam.de/weldx/schemas/equipment/measurement_equipment-0.1.0\"\n",
+    "tag: \"asdf://weldx.bam.de/weldx/tags/equipment/measurement_equipment-0.1.0\"\n",
     "\n",
     "title: |\n",
     "  A piece of measurement equipment.\n",
@@ -202,11 +202,11 @@
     "  sources:\n",
     "    type: array\n",
     "    items:\n",
-    "      tag: \"asdf://weldx.bam.de/weldx/tags/measurement/source-1.0.0\"\n",
+    "      tag: \"asdf://weldx.bam.de/weldx/tags/measurement/source-0.1.*\"\n",
     "  transformations:\n",
     "    type: array\n",
     "    items:\n",
-    "      tag: \"asdf://weldx.bam.de/weldx/tags/measurement/signal_transformation-1.0.0\"\n",
+    "      tag: \"asdf://weldx.bam.de/weldx/tags/measurement/signal_transformation-0.1.*\"\n",
     "\n",
     "propertyOrder: [name, sources, transformations]\n",
     "required: [name]\n",
@@ -246,8 +246,8 @@
     "%YAML 1.1\n",
     "---\n",
     "$schema: \"http://stsci.edu/schemas/yaml-schema/draft-01\"\n",
-    "id: \"asdf://weldx.bam.de/weldx/schemas/equipment/measurement_equipment-1.0.0\"\n",
-    "tag: \"asdf://weldx.bam.de/weldx/tags/equipment/measurement_equipment-1.0.0\"\n",
+    "id: \"asdf://weldx.bam.de/weldx/schemas/equipment/measurement_equipment-0.1.0\"\n",
+    "tag: \"asdf://weldx.bam.de/weldx/tags/equipment/measurement_equipment-0.1.0\"\n",
     "\n",
     "title: |\n",
     "  A piece of measurement equipment.\n",
@@ -262,11 +262,11 @@
     "  sources:\n",
     "    type: array\n",
     "    items:\n",
-    "      tag: \"tag:weldx.bam.de:weldx/measurement/source-1.0.0\"\n",
+    "      tag: \"asdf://weldx.bam.de/weldx/tags/measurement/source-0.1.*\"\n",
     "  transformations:\n",
     "    type: array\n",
     "    items:\n",
-    "      tag: \"tag:weldx.bam.de:weldx/measurement/signal_transformation-1.0.0\"\n",
+    "      tag: \"asdf://weldx.bam.de/weldx/tags/measurement/signal_transformation-0.1.*\"\n",
     "  wx_metadata:\n",
     "    type: object\n",
     "    properties:\n",
@@ -287,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We save the code in the file `my_measurement_equipment_schema-1.0.0.yaml`:"
+    "We save the code in the file `my_measurement_equipment_schema-0.1.0.yaml`:"
    ]
   },
   {
@@ -306,7 +306,7 @@
    "source": [
     "# write to the file\n",
     "with mem_fs.open(\n",
-    "    \"resources/my_organization/schemas/my_measurement_equipment_schema-1.0.0.yaml\", \"w\"\n",
+    "    \"resources/my_organization/schemas/my_measurement_equipment_schema-0.1.0.yaml\", \"w\"\n",
     ") as file:\n",
     "    file.write(schema_file)"
    ]
@@ -340,8 +340,8 @@
    "source": [
     "manifest_file = \"\"\"\n",
     "# header\n",
-    "id: http://my_organization/manifests/my_standard-1.0.0\n",
-    "extension_uri: http://my_organization/standards/my_standard-1.0.0\n",
+    "id: asdf://my_organization/manifests/my_standard-1.0.0\n",
+    "extension_uri: asdf://my_organization/standards/my_standard-1.0.0\n",
     "title: My own standard\n",
     "description: |-\n",
     "  A new and stricter standard for measurement equipment.\n",
@@ -349,7 +349,7 @@
     "\n",
     "# mappings\n",
     "tags:\n",
-    "- uri: \"asdf://weldx.bam.de/weldx/schemas/equipment/measurement_equipment-1.0.0\"\n",
+    "- uri: \"asdf://weldx.bam.de/weldx/schemas/equipment/measurement_equipment-0.1.0\"\n",
     "  file: \"my_measurement_equipment_schema-1.0.0\"\n",
     "\"\"\""
    ]
@@ -392,7 +392,7 @@
     "If you are not sure about the exact URI just have a look into the original schema of the object.\n",
     "You can find all schemas [here](../standard.rst).\n",
     "In our example we want to replace the schema for the URI\n",
-    "`asdf://weldx.bam.de/weldx/schemas/equipment/measurement_equipment-1.0.0`.\n",
+    "`asdf://weldx.bam.de/weldx/schemas/equipment/measurement_equipment-0.1.0`.\n",
     "Additionally, each item of the YAML list needs a `file` property which specifies the relative file path of the new\n",
     "schema inside the `schemas` directory, omitting the file extension.\n",
     "So in our case we use `file: \"my_measurement_equipment_schema-1.0.0`\n",
@@ -637,7 +637,7 @@
   "kernelspec": {
    "display_name": "weldx",
    "language": "python",
-   "name": "weldx"
+   "name": "weldx-dev"
   },
   "language_info": {
    "codemirror_mode": {
