Finish first draft

--- a/tutorials/01_03_geometry.ipynb
+++ b/tutorials/01_03_geometry.ipynb
@@ -52,73 +52,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "workpiece = wxfile[\"workpiece\"]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The workpiece data of this particular file consists of two parts:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for key in workpiece.keys():\n",
-    "    print(key)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The workpiece data of this particular file consists of two parts:\n",
+    "\n",
+    "- `base_metal`\n",
+    "- `geometry`\n",
+    "\n",
     "The `base_metal` field contains information about the composition of the specimens material, which is not relevant for this tutorial.\n",
-    "We are only interested in the `geometry` section that is further divided into `groove_shape` and `seam_length`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for key in workpiece[\"geometry\"].keys():\n",
-    "    print(key)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "We are only interested in the `geometry` section that is further divided into: \n",
+    "\n",
+    "- `groove_shape`\n",
+    "- `seam_length`\n",
+    "\n",
     "`groove_shape` describes the 2 dimensional cross-section of the specimen.\n",
-    "If we extract it, we will see that the returned object is of a special type defined by weldx:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "groove = workpiece[\"geometry\"][\"groove_shape\"]\n",
-    "type(groove)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "One can already deduce from the types name that the specimens cross section is a V-groove defined by ISO 9692-1.\n",
-    "The norm describes the shape of the groove by different shape parameters.\n",
+    "We can already see, that it is of type `VGroove`.\n",
+    "This object is based on the V-Groove described by ISO 9692-1.\n",
+    "The norm specifies the shape of the groove by different shape parameters.\n",
     "We could now inspect the different parameter values and look up what meaning they have.\n",
     "However, this would be rather tedious.\n",
     "A much simpler way is to use the `plot` method of the groove object:"
@@ -130,6 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "groove = wxfile[\"workpiece\"][\"geometry\"][\"groove_shape\"]\n",
     "groove.plot()"
    ]
   },
@@ -185,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3-dimensional plot\n",
+    "## 3d plot (matplotlib)\n",
     "\n",
     "We can also create a nice 3d plot from the groove and the seam length stored in the WelDX file.\n",
     "All we need fore this is the `Geometry` class of WelDX.\n",
@@ -200,15 +152,17 @@
    "source": [
     "from weldx import Geometry, Trace, LinearHorizontalTraceSegment, Q_\n",
     "\n",
-    "t = Trace(LinearHorizontalTraceSegment(workpiece[\"geometry\"][\"seam_length\"]))\n",
-    "geometry = Geometry(groove.to_profile(), t)"
+    "t = Trace(LinearHorizontalTraceSegment(wxfile[\"workpiece\"][\"geometry\"][\"seam_length\"]))\n",
+    "geometry = Geometry(groove, t)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now all that remains, you might have guessed it, is to call the plot method:"
+    "Now all that remains, you might have guessed it, is to call the plot method:\n",
+    "\n",
+    "> HINT:  Uncomment the code in the next cell to enable interactive plots in jupyter notebooks"
    ]
   },
   {
@@ -217,19 +171,159 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "geometry.plot(Q_(\"2mm\"), Q_(\"50mm\"))"
+    "# %matplotlib widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geometry.plot()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By default, the plot function will use Matplotlib for rendering.\n",
-    "However, Matplotlib wasn't originally designed for 3d plots.\n",
-    "Therefore, the quality of the rendered image might not be sufficient.\n",
-    "As an alternative, you can enable k3d as rendering backend when working in a jupyter notebook.\n",
+    "The 3d plot you see does not show a closed surface but is composed of multiple triangles.\n",
+    "The reason for this is that the default rendering backend, matplotlib, wasn't meant to be a 3d plotting tool.\n",
+    "Therefore it lacks certain features that would be necessary for a correct plot of a closed 3d surface.\n",
+    "Because all those plotted lines can make it sometimes hard to identify the actual shape, the plot function gives you the choice to plot only the control points instead of the triangles.\n",
+    "This can be achieved by setting the `show_wireframe` parameter to `False`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geometry.plot(show_wireframe=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The density of the triangle mesh or the point cloud can be controlled py the parameters `profile_raster_width` and `trace_raster_width`.\n",
+    "The first one sets the point density of the individual profiles, while the value of the second one influences, how many profiles are actually drawn.\n",
+    "Both parameters need to be specified as `pint.Quantity`.\n",
+    "You can simply import `Q_` from `weldx` to use quantities:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from weldx import Q_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we plot the geometry again with different raster widths:\n",
     "\n",
-    "> TODO: continue after geometry enhancements"
+    "> TODO: fix cell below once the geometry units PR is merged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# geometry.plot(profile_raster_width=Q_(0.25, \"mm\"), trace_raster_width=\"17cm\", show_wireframe=False)\n",
+    "geometry.plot(profile_raster_width=0.25, trace_raster_width=170, show_wireframe=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see, we now got only 3 densly rendered profiles.\n",
+    "Try some other values to figure out which setting suits you most.\n",
+    "\n",
+    "The last command also demonstrates two different ways to provide a Quantity to function that expects.\n",
+    "We can either construct a quantity from a value and a unit like `Q_(0.25, \"mm\")` or we can combine value and unit in a string as `17cm`.\n",
+    "The second approach does not require us to import `Q_` but it is limited to scalar values and only works for function parameters.\n",
+    "\n",
+    "Another noteworthy thing we did in the last command is using length units of different magnitude (`mm` and `cm`).\n",
+    "This is totally fine since `weldx` can handle all necessary conversions internally by utilizing the powerfull [Python package `pint`](https://pint.readthedocs.io/en/stable/)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3d plot (k3d)\n",
+    "\n",
+    "In the previous section we learned how to generate simple 3d-plots from a groove and a seam length using the `plot` method.\n",
+    "By default, `plot` relies on matplotlib as rendering backend.\n",
+    "We have already mentioned before that this is not ideal for 3d renderings.\n",
+    "Therefore, the `weldx` package offers an alternative for jupyter notebook users.\n",
+    "You can select the `k3d` package as rendering backend as follows:\n",
+    "\n",
+    "> HINT: Interactive 3d plots are not visible in the plain html documentation. \n",
+    "        Click on the binder link button at the beginning of the tutorial to start a jupyter-lab session of this tutorial."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment next line to create a k3d plot\n",
+    "# geometry.plot(backend=\"k3d\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we got a nice 3d rendering of the geometry with a closed surface that we shift and turn as we like.\n",
+    "But since `k3d` uses equal axis scaling, we notice that the specimen appears to be rather slim.\n",
+    "The reason for this is that the provided groove types only specify the shape of the groove, but not the actual specimen width.\n",
+    "But we can provide one during creation of the geometry using the `widht` parameter.\n",
+    "Note that this only works with groove types and not with a plain `Profile`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> TODO Remove `Q_` below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geometry_2 = Geometry(groove, t, width=Q_(\"20cm\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now lets plot the geometry again:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment next line to create a k3d plot\n",
+    "# geometry_2.plot(profile_raster_width=\"5mm\", trace_raster_width=\"16cm\", backend=\"k3d\")"
    ]
   },
   {
@@ -238,7 +332,8 @@
    "source": [
     "## Export 3d geometry into a CAD file\n",
     "\n",
-    "The `Geometry` class features a `to_file` method, that allows you to export the 3d data to different file formats like `.ply` or `.stl`.\n",
+    "The `Geometry` class also features a `to_file` method.\n",
+    "It allows you to export the 3d data to different file formats like `.ply` or `.stl`.\n",
     "Using this function, you can inspect the geometry in a CAD program or model viewer of your choice:"
    ]
   },
@@ -255,8 +350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The parameters `profile_raster_width` and `trace_raster_width` determine the density of the data points of the exported mesh.\n",
-    "All the previously discussed `.plot` methods have similar optional parameters."
+    "The parameters `profile_raster_width` and `trace_raster_width` do have the exact same effect as in the `plot` method described before."
    ]
   },
   {
@@ -265,10 +359,15 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "In this tutorial we have leared that WelDX can store geometrical data in form of a 2d-cross section and an extrusion length.\n",
+    "In this tutorial we have learned that WelDX can store geometrical data in form of a 2d-cross section and an extrusion length.\n",
     "The 2d cross section can either be of a specialized groove type or a more general `Profile`.\n",
     "Both can be visualized using the `plot` function and turned into an actual 3d geometry using the `Geometry` class.\n",
-    "The `Geometry` class itself can also be rendered in a 3d plot and exported to a CAD compatible file format."
+    "The `Geometry` class itself can also be rendered in a 3d plot and exported to a CAD compatible file format.\n",
+    "\n",
+    "## Further Readings\n",
+    "\n",
+    "- [Supported Groove Types](https://weldx.readthedocs.io/en/latest/tutorials/groove_types_01.html)\n",
+    "- [API tutorial: 3d Geometries](https://weldx.readthedocs.io/en/latest/tutorials/geometry_02_geometry.html)"
    ]
   },
   {
